--- a/src/Topxia/AdminBundle/Resources/views/Invite/set.html.twig
+++ b/src/Topxia/AdminBundle/Resources/views/Invite/set.html.twig
@@ -72,14 +72,13 @@
       <input type="hidden" name="_csrf_token" value="{{ csrf_token('site') }}">
     </form>
 
-{% verbatim %}    
+
 <div class="alert alert-info">
   <p><strong>{{'通知变量说明：'|trans}}</strong></p>
   <ul>
-    <li>{{siteName}}:{{'网校名称'|trans}}</li>
-    <li>{{registerUrl}}:{{'注册链接的地址'|trans}}</li>
+    <li>{% verbatim %}{{siteName}}{% endverbatim %}:{{'网校名称'|trans}}</li>
+    <li>{% verbatim %}{{registerUrl}}{% endverbatim %}:{{'注册链接的地址'|trans}}</li>
   </ul>
 </div>
-{% endverbatim %}
 
 {% endblock %}
