site setting complete

--- a/src/Topxia/AdminBundle/Resources/views/Navigation/index.html.twig
+++ b/src/Topxia/AdminBundle/Resources/views/Navigation/index.html.twig
@@ -3,18 +3,18 @@
 {% set script_controller = 'navigation/index' %}
 
 {% set menu = 'admin_'~type~'_navigation' %}
-{% set types = {top:'顶部', foot:'底部', friendlyLink:'友情链接'} %}
+{% set types = {top:'顶部'|trans, foot:'底部'|trans, friendlyLink:'友情链接'|trans} %}
 
 {% block page_buttons %} 
-    <button class="btn btn-success btn-sm pull-right" id="add-navigation-btn" data-toggle="modal" data-target="#modal" data-url="{{ path('admin_navigation_create', {type: type}) }}">{% if types[type] == '友情链接' %}新增{{ types[type] }}{% else %}新增{{ types[type] }}导航{% endif %}</button>
+    <button class="btn btn-success btn-sm pull-right" id="add-navigation-btn" data-toggle="modal" data-target="#modal" data-url="{{ path('admin_navigation_create', {type: type}) }}">{% if types[type] == '友情链接' %}{{'新增%types[type]%'|trans({'%types[type]%': types[type] })}}{% else %}{{'新增%types[type]%导航'|trans({'%types[type]%': types[type] })}}{% endif %}</button>
 {% endblock %}
 
 {% block main %}
 
 {% if type == 'foot' %}
-<div class="alert alert-info"><i class="glyphicon glyphicon-info-sign"></i> 清秋主题、默认主题A、默认主题B、雅致简洁之外的主题，请前往 <a class="text-info" style="font-weight:bold;" href="{{ path('admin_block', {category:'theme'}) }}">［运营］－［编辑区管理］</a> 中进行编辑。</div>
+<div class="alert alert-info"><i class="glyphicon glyphicon-info-sign"></i> {{'清秋主题、默认主题A、默认主题B、雅致简洁之外的主题，请前往'|trans}} <a class="text-info" style="font-weight:bold;" href="{{ path('admin_block', {category:'theme'}) }}">{{'［运营］－［编辑区管理］'|trans}}</a> {{'中进行编辑。'|trans}}</div>
 {% elseif type == 'friendlyLink' %}
-<div class="alert alert-info"><i class="glyphicon glyphicon-info-sign"></i> 如需在首页显示友情链接模块，请在对应<a class="text-info" style="font-weight:bold;" href="{{ path('admin_setting_theme') }}">主题管理</a>中添加相应模块，暂仅支持简墨主题。
+<div class="alert alert-info"><i class="glyphicon glyphicon-info-sign"></i> {{'如需在首页显示友情链接模块，请在对应'|trans}}<a class="text-info" style="font-weight:bold;" href="{{ path('admin_setting_theme') }}">{{'主题管理'|trans}}</a>{{'中添加相应模块，暂仅支持简墨主题。'|trans}}
 </div>
 {% endif %}
 
