--- a/src/Topxia/AdminBundle/Resources/views/Navigation/navigation-modal.html.twig
+++ b/src/Topxia/AdminBundle/Resources/views/Navigation/navigation-modal.html.twig
@@ -11,9 +11,9 @@
 {% elseif navigation.id > 0 and navigation.type =='foot'%}
 {{'编辑底部导航'|trans}}
 {% elseif navigation.id == 0 and navigation.type =='friendlyLink'%}
-新增友情链接
+{{'新增友情链接'|trans}}
 {% elseif navigation.id > 0 and navigation.type =='friendlyLink'%}
-编辑友情链接
+{{'编辑友情链接'|trans}}
 {% endif %}
 
 {% endblock %}
